Added data model.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-json = {version = "0.12.4", default-features = true}
+serde_json = {version = "1.0.87", default-features = true}
+chrono = {version = "0.4.22", default-features = true}
