--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 serde_json = {version = "1.0.87", default-features = true}
 chrono = {version = "0.4.22", default-features = true}
+
+[dependencies.rusqlite]
+version = "0.28.0"
+features = ["bundled"]
