--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,17 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+
 [dependencies]
+futures-util = { version = "0.3", default-features = true }
+futures-channel = { version = "0.3", default-features = true }
 serde_json = {version = "1.0.87", default-features = true}
 chrono = {version = "0.4.22", default-features = true}
+tokio = { version = "1.0.0", features = ["full"] }
+nix = {version = "0.18.0", default-features = true}
+tungstenite = {version = "0.17.3", default-features = true}
+tokio-tungstenite = {version = "0.17.2", default-features = true}
 
 [dependencies.rusqlite]
 version = "0.28.0"
